fix migrations, add jaeger, swagger
