# docs/swagger.json
@@ -8,6 +8,52 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/clients/auth/sign-in": {
+            "post": {
+                "description": "sign-in in partners with given data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Clients"
+                ],
+                "summary": "Sign-in for partners",
+                "parameters": [
+                    {
+                        "description": "Credentials to use",
+                        "name": "partner",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ClientSignIn"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SignSuccess"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Err"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Err"
+                        }
+                    }
+                }
+            }
+        },
         "/clients/auth/sign-up": {
             "post": {
                 "description": "create client with given data",
@@ -35,52 +81,6 @@
                 "responses": {
                     "201": {
                         "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/models.SignSuccess"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/utils.Err"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/utils.Err"
-                        }
-                    }
-                }
-            }
-        },
-        "/partners/auth/sign-in": {
-            "post": {
-                "description": "sign-in in partners with given data",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Partners"
-                ],
-                "summary": "Sign-in for partners",
-                "parameters": [
-                    {
-                        "description": "Credentials to use",
-                        "name": "partner",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.ClientSignIn"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.SignSuccess"
                         }
@@ -132,6 +132,7 @@
                 },
                 "name": {
                     "type": "string",
+                    "maxLength": 100,
                     "minLength": 3
                 },
                 "password": {
